tests/neg-custom-args/captures/console-use-2.check
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/console-use-2/Test_2.scala:4:2 -------------------------
4 |  Console.println("hello") // error
  |  ^^^^^^^
  |  Reference `test.Console` is not included in the allowed capture set {}
  |  of the enclosing constructor Test in object Test.
  |
  |  External uses should be declared explicitly with a uses_init clause in object Test:
  |
  |      uses_init test.Console
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/console-use-2/Test_2.scala:7:4 -------------------------
7 |    Console.println("hello") // error
  |    ^^^^^^^
  |    Reference `test.Console` is not included in the allowed capture set {}
  |    of the enclosing object Test in package test.
  |
  |    External uses should be declared explicitly with a uses clause in object Test:
  |
  |        uses test.Console
